--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
-   <link rel="stylesheet" href="assets/stylesheet/style.css" />
-    <link rel="stylesheet" href="assets/stylesheet/responsive.css" />
+   <link rel="stylesheet" href="assets/style.css" />
+    <link rel="stylesheet" href="assets/responsive.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -785,7 +785,7 @@ This Project Was Created To Provide Greetings To The Recipient.</p>
         <p class="text-center">Created by <a href="#">@yogaafp</a></p>
       </div>
     </div>
-    <script src="assets/stylesheet/app.js"></script>
+    <script src="assets/app.js"></script>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
@@ -806,4 +806,5 @@ This Project Was Created To Provide Greetings To The Recipient.</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
   </body>
-</html>
+  </html>
+  
